# cargodisttest

./: Cargo.toml  RELEASES.md  artifacts.json  changelog.rss  dist-stage.ps1  index.html
.github/workflows/: append-test.yml  cargodisttest-release.yml  local-build-maturin.yml  owo-release.yml  release.yml
artifacts/: index.html
book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
changelog/: index.html
wix/: main.wxs
